# toy-http-server

./: .gitmodules  CMakeLists.txt  LICENSE  README.md
scripts/: bomb.sh  runbackend.sh  runtests.sh  travis.sh
src/: config.hpp  endpoint.cpp  endpoint.hpp  main.cpp  request.cpp  request.hpp  response.hpp  server.cpp  server.hpp  socket.cpp  socket.hpp
src/static/: status.hpp
tests/: tests.cpp
